; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/powermac/extr_grackle.c_grackle_read_config.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/powermac/extr_grackle.c_grackle_read_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grackle_softc = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32, i32, i32)* @grackle_read_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grackle_read_config(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.grackle_softc*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32, align 4
  store i32 %0, i32* %8, align 4
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 -1, i32* %16, align 4
  %17 = load i32, i32* %8, align 4
  %18 = call %struct.grackle_softc* @device_get_softc(i32 %17)
  store %struct.grackle_softc* %18, %struct.grackle_softc** %14, align 8
  %19 = load %struct.grackle_softc*, %struct.grackle_softc** %14, align 8
  %20 = getelementptr inbounds %struct.grackle_softc, %struct.grackle_softc* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i32, i32* %12, align 4
  %23 = and i32 %22, 3
  %24 = sext i32 %23 to i64
  %25 = add nsw i64 %21, %24
  store i64 %25, i64* %15, align 8
  %26 = load %struct.grackle_softc*, %struct.grackle_softc** %14, align 8
  %27 = load i32, i32* %9, align 4
  %28 = load i32, i32* %10, align 4
  %29 = load i32, i32* %11, align 4
  %30 = load i32, i32* %12, align 4
  %31 = call i64 @grackle_enable_config(%struct.grackle_softc* %26, i32 %27, i32 %28, i32 %29, i32 %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %58

33:                                               ; preds = %6
  %34 = load i32, i32* %9, align 4
  %35 = icmp sgt i32 %34, 0
  br i1 %35, label %36, label %46

36:                                               ; preds = %33
  %37 = load %struct.grackle_softc*, %struct.grackle_softc** %14, align 8
  %38 = getelementptr inbounds %struct.grackle_softc, %struct.grackle_softc* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = inttoptr i64 %39 to i8*
  %41 = call i64 @badaddr(i8* %40, i32 4)
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %45

43:                                               ; preds = %36
  %44 = load i32, i32* %16, align 4
  store i32 %44, i32* %7, align 4
  br label %62

45:                                               ; preds = %36
  br label %46

46:                                               ; preds = %45, %33
  %47 = load i32, i32* %13, align 4
  switch i32 %47, label %57 [
    i32 1, label %48
    i32 2, label %51
    i32 4, label %54
  ]

48:                                               ; preds = %46
  %49 = load i64, i64* %15, align 8
  %50 = call i32 @in8rb(i64 %49)
  store i32 %50, i32* %16, align 4
  br label %57

51:                                               ; preds = %46
  %52 = load i64, i64* %15, align 8
  %53 = call i32 @in16rb(i64 %52)
  store i32 %53, i32* %16, align 4
  br label %57

54:                                               ; preds = %46
  %55 = load i64, i64* %15, align 8
  %56 = call i32 @in32rb(i64 %55)
  store i32 %56, i32* %16, align 4
  br label %57

57:                                               ; preds = %46, %54, %51, %48
  br label %58

58:                                               ; preds = %57, %6
  %59 = load %struct.grackle_softc*, %struct.grackle_softc** %14, align 8
  %60 = call i32 @grackle_disable_config(%struct.grackle_softc* %59)
  %61 = load i32, i32* %16, align 4
  store i32 %61, i32* %7, align 4
  br label %62

62:                                               ; preds = %58, %43
  %63 = load i32, i32* %7, align 4
  ret i32 %63
}

declare dso_local %struct.grackle_softc* @device_get_softc(i32) #1

declare dso_local i64 @grackle_enable_config(%struct.grackle_softc*, i32, i32, i32, i32) #1

declare dso_local i64 @badaddr(i8*, i32) #1

declare dso_local i32 @in8rb(i64) #1

declare dso_local i32 @in16rb(i64) #1

declare dso_local i32 @in32rb(i64) #1

declare dso_local i32 @grackle_disable_config(%struct.grackle_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
